# mail_distributions

./: .gitignore  CMakeLists.txt  main.cpp
core/: base_64.cpp  base_64.hpp  smtp_server.cpp  smtp_server.hpp
core/database/: db_query_executor.cpp  db_query_executor.hpp  db_tools.cpp  db_tools.hpp  pg_backend.cpp  pg_backend.hpp  pg_connection.cpp  pg_connection.hpp
core/rest/: microsvc_controller.cpp  microsvc_controller.hpp
core/rest/foundation/: basic_controller.cpp  network_utils.cpp
core/rest/foundation/include/: basic_controller.hpp  controller.hpp  network_utils.hpp  runtime_utils.hpp  std_micro_service.hpp  usr_interrupt_handler.hpp
core/smtp/: md_5.cpp  md_5.hpp  smtp_common.cpp  smtp_common.hpp  smtp_exception.cpp  smtp_exception.hpp  smtp_server.cpp  smtp_server.hpp  smtp_statistic.cpp  smtp_statistic.hpp
tools/args_parser/: argument_parser.cpp  argument_parser.hpp
tools/database/: pg_backend.cpp  pg_backend.hpp  pg_connection.cpp  pg_connection.hpp
tools/service/: base_64.hpp  service.cpp  service.hpp
